--- a/src/presentation/view/button.css
+++ b/src/presentation/view/button.css
@@ -1,5 +1,8 @@
 /* Button Style */
-
+@font-face {
+    font-family: ARCADECLASSIC;
+    src: url('../../../main/resources/Fonts/ARCADECLASSIC.TTF');
+}
 
 .button-view {
     -fx-spacing: 5;
@@ -9,6 +12,7 @@
 .button {
     -fx-background-color: #1a1a1a;
     -fx-text-fill: #f0f0f0;
+    -fx-font-family: ARCADECLASSIC;
     -fx-font-size: 16;
     -fx-font-weight: bold;
     -fx-border-color: #f0f0f0;
