--- a/src/presentation/view/style.css
+++ b/src/presentation/view/style.css
@@ -1,4 +1,33 @@
-/* styles.css */
+@font-face {
+    font-family: ARCADECLASSIC;
+    src: url('../../../main/resources/Fonts/ARCADECLASSIC.TTF');
+}
+
+.root {
+    -fx-background-color: #1a1a1a; /* Dark background color */
+    -fx-alignment: center;
+}
+
+
+
+.solo-game-view {
+    -fx-background-color: #333333; /* Dark gray background */
+    -fx-alignment: center;
+    -fx-pref-width: 500px;
+    -fx-pref-height: 500px;
+}
+
+.navigation-view{
+-fx-background-color: #1a1a1a;
+    -fx-alignment: left;
+}
+
+.name-view {
+    -fx-background-color: #1a1a1a; /* Dark gray background */
+    -fx-alignment: center;
+    -fx-spacing: 10;
+    -fx-padding: 20;
+}
 
 .highscore-view {
     -fx-spacing: 5;
@@ -6,42 +35,88 @@
 }
 
 .score-label {
-    -fx-font-size: 18;
-    -fx-text-fill: #f0f0f0; /* Text color (white) */
+    -fx-font-family: ARCADECLASSIC;
+    -fx-font-size: 35; /* Adjusted font size */
+    -fx-text-fill: #f0f0f0;
 }
 
 .score-points-label {
-    -fx-font-size: 24;
+    -fx-font-family: ARCADECLASSIC;
+    -fx-font-size: 40; /* Adjusted font size */
     -fx-font-weight: bold;
-    -fx-text-fill: #ffcc00; /* Text color (yellow) */
+    -fx-text-fill: #ffcc00;
 }
-
-/* ArcadeStyle.css */
-
-
 
 .name-label {
-    -fx-font-size: 24;
+    -fx-font-family: ARCADECLASSIC;
+    -fx-font-size: 35; /* Adjusted font size */
     -fx-font-weight: bold;
-    -fx-text-fill: #ffcc00; /* Green text color */
+    -fx-text-fill: #ffcc00;
 }
 
+
 .name-field {
-    -fx-font-size: 16px;
-    -fx-background-color: #696969; /* Dim gray background color */
-    -fx-text-fill: #00FF00; /* Green text color */
-    -fx-border-color: #00FF00; /* Green border color */
+    -fx-font-family: ARCADECLASSIC;
+    -fx-font-size: 18px; /* Adjusted font size */
+    -fx-background-color: #696969;
+    -fx-text-fill: #00FF00;
+    -fx-border-color: #00FF00;
 }
 
 .confirm-button {
     -fx-background-color: #1a1a1a;
     -fx-text-fill: #f0f0f0;
-    -fx-font-size: 16;
+    -fx-font-family: ARCADECLASSIC;
+    -fx-font-size: 18; /* Adjusted font size */
     -fx-font-weight: bold;
     -fx-border-color: #f0f0f0;
     -fx-border-width: 2;
 }
 
 .confirm-button:hover {
-    -fx-background-color: #FFA500; /* Orange background color on hover */
+    -fx-background-color: #FFA500;
+}
+
+.comboBox {
+    -fx-font-family: ARCADECLASSIC;
+    -fx-font-size: 18; /* Adjusted font size */
+    -fx-background-color: #696969;
+}
+
+.comboBox:editable {
+    -fx-background-color: #696969;
+}
+
+.new-label {
+    -fx-text-fill: #FFA500;
+    -fx-font-family: ARCADECLASSIC;
+    -fx-font-size: 40px;
+}
+
+.main-menu-view {
+    -fx-background-color: #1a1a1a;
+
+
+}
+
+.card-pack-select-view {
+    -fx-background-color: #1a1a1a;
+    -fx-spacing: 10;
+}
+
+.label-menu {
+    -fx-text-fill: #FF6F61;
+    -fx-font-family: ARCADECLASSIC;
+}
+
+.headline {
+    -fx-alignment: center;
+    -fx-text-fill: #FFFF00;
+    -fx-font-family: ARCADECLASSIC;
+    -fx-font-size: 60;
+}
+
+.label-menu:hover {
+    -fx-font-size: 40px;
+    -fx-underline: true;
 }
