--- a/src/presentation/view/style.css
+++ b/src/presentation/view/style.css
@@ -4,26 +4,26 @@
 }
 
 .root {
-    -fx-background-color: #1a1a1a; /* Dark background color */
+    -fx-background-color: #1a1a1a;
     -fx-alignment: center;
 }
 
-
-
 .solo-game-view {
-    -fx-background-color: #333333; /* Dark gray background */
+    -fx-background-color: #1a1a1a;
+    -fx-border-color: #f0f0f0;
+    -fx-border-width:1px;
     -fx-alignment: center;
     -fx-pref-width: 500px;
     -fx-pref-height: 500px;
 }
 
-.navigation-view{
--fx-background-color: #1a1a1a;
+.navigation-view {
+    -fx-background-color: #1a1a1a;
     -fx-alignment: left;
 }
 
 .name-view {
-    -fx-background-color: #1a1a1a; /* Dark gray background */
+    -fx-background-color: #1a1a1a;
     -fx-alignment: center;
     -fx-spacing: 10;
     -fx-padding: 20;
@@ -36,38 +36,37 @@
 
 .score-label {
     -fx-font-family: ARCADECLASSIC;
-    -fx-font-size: 35; /* Adjusted font size */
+    -fx-font-size: 35;
     -fx-text-fill: #f0f0f0;
 }
 
 .score-points-label {
     -fx-font-family: ARCADECLASSIC;
-    -fx-font-size: 40; /* Adjusted font size */
+    -fx-font-size: 40;
     -fx-font-weight: bold;
     -fx-text-fill: #ffcc00;
 }
 
 .name-label {
     -fx-font-family: ARCADECLASSIC;
-    -fx-font-size: 35; /* Adjusted font size */
+    -fx-font-size: 35;
     -fx-font-weight: bold;
-    -fx-text-fill: #ffcc00;
+    -fx-text-fill: #FF6F61;
 }
-
 
 .name-field {
     -fx-font-family: ARCADECLASSIC;
-    -fx-font-size: 18px; /* Adjusted font size */
+    -fx-font-size: 18px;
     -fx-background-color: #696969;
-    -fx-text-fill: #00FF00;
-    -fx-border-color: #00FF00;
+    -fx-text-fill: #FFFF00;
+    -fx-border-color: #FFFF00;
 }
 
 .confirm-button {
     -fx-background-color: #1a1a1a;
     -fx-text-fill: #f0f0f0;
     -fx-font-family: ARCADECLASSIC;
-    -fx-font-size: 18; /* Adjusted font size */
+    -fx-font-size: 18;
     -fx-font-weight: bold;
     -fx-border-color: #f0f0f0;
     -fx-border-width: 2;
@@ -78,25 +77,30 @@
 }
 
 .listview {
-    -fx-background-color: #000000; /* Hintergrundfarbe */
-    -fx-border-color: #f0f0f0; /* Randfarbe */
-    -fx-border-width: 1px; /* Randbreite */
-    -fx-padding: 10px; /* Innenabstand */
-    -fx-font-size: 14px; /* Schriftgröße */
+    -fx-background-color: white;
+    -fx-border-color: white;
+     -fx-border-width: 2px;/* Farbe des Hauptmenüs */
+    -fx-padding: 5px;
+    -fx-font-size: 14px;
 }
 
 .listview .list-cell {
-    -fx-background-color: #FFA500; /* Dunkelgrauer Hintergrund für Zellen */
-    -fx-border-color: #444444; /* Dunkelgrauer Rand für Zellen */
+    -fx-background-color: #1a1a1a;
+    -fx-border-color: #696969; /* Farbe des Hauptmenüs */
     -fx-border-width: 1px;
-    -fx-text-fill: #ffffff; /* Weiße Textfarbe */
-    -fx-font-family: ARCADECLASSIC; /* Arcade-ähnliche Schriftart */
+    -fx-font-family: ARCADECLASSIC;
     -fx-font-size: 20px;
+}
+
+.listview-label {
+    -fx-text-fill: #FFA500; /* Orange Textfarbe */
+    -fx-font-family: ARCADECLASSIC; /* Arcade-ähnliche Schriftart */
+    -fx-font-size: 20px; /* Schriftgröße */
 }
 
 .comboBox {
     -fx-font-family: ARCADECLASSIC;
-    -fx-font-size: 18; /* Adjusted font size */
+    -fx-font-size: 18;
     -fx-background-color: #696969;
 }
 
@@ -112,8 +116,6 @@
 
 .main-menu-view {
     -fx-background-color: #1a1a1a;
-
-
 }
 
 .card-pack-select-view {
@@ -123,6 +125,7 @@
 
 .label-menu {
     -fx-text-fill: #FF6F61;
+    -fx-font-size: 30px;
     -fx-font-family: ARCADECLASSIC;
 }
 
